tree-sitter-ora/grammar.js
    source_file: ($) => repeat($._top_level_declaration),

    _top_level_declaration: ($) => choice(
      $.contract_declaration,
      $.function_declaration,
      $.variable_declaration,
      $.struct_declaration,
      $.bitfield_declaration,
      $.enum_declaration,
      $.log_declaration,
      $.import_declaration,
      $.error_declaration,
      $.ghost_declaration,
      $.contract_invariant,
    ),

    contract_declaration: ($) => seq(
      "contract",
      field("name", $.identifier),
      optional(field("type_parameters", $.generic_parameter_clause)),
      "{",
      repeat($.contract_member),
      "}",
    ),

    contract_member: ($) => choice(
      $.variable_declaration,
      $.function_declaration,
      $.log_declaration,
      $.struct_declaration,
      $.bitfield_declaration,
      $.enum_declaration,
      $.error_declaration,
      $.ghost_declaration,
      $.contract_invariant,
    ),

    function_declaration: ($) => seq(
      optional("pub"),
      "fn",
      field("name", choice($.identifier, "init")),
      "(",
      optional($.parameter_list),
      ")",
      optional($.return_type),
      repeat($.requires_clause),
      repeat($.ensures_clause),
      field("body", choice(
        $.block,
        $.return_statement,
      )),
    ),

    parameter_list: ($) => seq(
      $.parameter,
      repeat(seq(",", $.parameter)),
      optional(","),
    ),

    parameter: ($) => seq(
      optional(field("modifier", $.parameter_modifier)),
      field("name", $.identifier),
      ":",
      field("type", $.type),
    ),

    return_type: ($) => seq("->", field("type", $.type)),
    requires_clause: ($) => seq("requires", "(", field("condition", $._expression), ")"),
    ensures_clause: ($) => seq("ensures", "(", field("condition", $._expression), ")"),

    variable_declaration: ($) => choice(
      seq(
        optional($.memory_region),
        field("kind", $.variable_kind),
        field("name", $.identifier),
        optional(seq(":", field("type", $.type))),
        optional(seq("=", field("value", $._expression))),
        ";",
      ),
      seq(
        field("region", $.memory_region),
        field("name", $.identifier),
        ":",
        field("type", $.type),
        optional(seq("=", field("value", $._expression))),
        ";",
      ),
      seq(
        field("name", $.identifier),
        ":",
        field("type", $.type),
        optional(seq("=", field("value", $._expression))),
        ";",
      ),
    ),

    memory_region: (_) => choice("storage", "memory", "tstore", "calldata"),
    variable_kind: (_) => choice("var", "let", "const", "immutable"),

    type: ($) => choice(
      $.error_union_type,
      $.plain_type,
    ),

    plain_type: ($) => choice(
      $.primitive_type,
      $.map_type,
      $.array_type,
      $.slice_type,
      $.tuple_type,
      $.anonymous_struct_type,
      $.generic_type,
      $.identifier,
    ),

    primitive_type: (_) => choice(
      "u8", "u16", "u32", "u64", "u128", "u256",
      "i8", "i16", "i32", "i64", "i128", "i256",
      "bool", "address", "string", "bytes", "void",
    ),

    _statement: ($) => choice(
      $.variable_declaration,
      $.tuple_variable_declaration,
      $.assignment_statement,
      $.compound_assignment_statement,
      $.destructuring_assignment,
      $.requires_statement,
      $.ensures_statement,
      $.assume_statement,
      $.havoc_statement,
      $.expression_statement,
      $.comptime_statement,
      $.if_statement,
      $.while_statement,
      $.for_statement,
      $.switch_statement,
      $.return_statement,
      $.break_statement,
      $.continue_statement,
      $.log_statement,
      $.lock_statement,
      $.unlock_statement,
      $.try_statement,
      $.assert_statement,
      $.labeled_block,
      $.block,
    ),

    compound_assignment_statement: ($) => seq(
      field("left", $.lvalue),
      field("operator", $.compound_operator),
      field("right", $._expression),
      ";",
    ),

    compound_operator: (_) => choice("+=", "-=", "*=", "/=", "%="),

    return_statement: ($) => seq("return", optional($._expression), ";"),

    block: ($) => seq("{", repeat($._statement), "}"),

    _expression: ($) => choice(
      $.assignment_expression,
      $.binary_expression,
      $.unary_expression,
      $.postfix_expression,
      $.primary_expression,
    ),

    binary_expression: ($) => choice(
      prec.right(PREC.RANGE, seq($._expression, "..", $._expression)),
      prec.left(PREC.LOGICAL_OR, seq($._expression, "||", $._expression)),
      prec.left(PREC.LOGICAL_AND, seq($._expression, "&&", $._expression)),
      prec.left(PREC.BIT_OR, seq($._expression, "|", $._expression)),
      prec.left(PREC.BIT_XOR, seq($._expression, "^", $._expression)),
      prec.left(PREC.BIT_AND, seq($._expression, "&", $._expression)),
      prec.left(PREC.EQUALITY, seq($._expression, choice("==", "!="), $._expression)),
      prec.left(PREC.RELATIONAL, seq($._expression, choice("<", "<=", ">", ">="), $._expression)),
      prec.left(PREC.SHIFT, seq($._expression, choice("<<", ">>", "<<%", ">>%"), $._expression)),
      prec.left(PREC.ADDITIVE, seq($._expression, choice("+", "-", "+%", "-%"), $._expression)),
      prec.left(PREC.MULTIPLICATIVE, seq($._expression, choice("*", "/", "%", "*%"), $._expression)),
      prec.right(PREC.EXPONENT, seq($._expression, choice("**", "**%"), $._expression)),
    ),

    lvalue: ($) => seq(
      choice(
        $.identifier,
        seq("(", $.lvalue, ")"),
      ),
      repeat(choice(
        seq(".", choice($.identifier, $.field_index)),
        seq("[", $._expression, "]"),
      )),
    ),

    primary_expression: ($) => choice(
      $.literal,
      $.identifier,
      $.error_identifier,
      $.parenthesized_expression,
      $.tuple_expression,
      $.try_expression,
      $.old_expression,
      $.comptime_expression,
      $.cast_expression,
      $.intrinsic_expression,
      $.error_expression,
      $.quantified_expression,
      $.anonymous_struct_literal,
      $.struct_literal,
      $.switch_expression,
      $.array_literal,
    ),

    literal: ($) => choice(
      $.bool_literal,
      $.number_literal,
      $.bytes_literal,
      $.string_literal,
    ),

    number_literal: (_) => choice(
      /0x[0-9A-Fa-f][0-9A-Fa-f_]*/,
      /0b[01][01_]*/,
      /[0-9][0-9_]*/,
    ),

    identifier: (_) => /[A-Za-z_][A-Za-z0-9_]*/,
  },
})

function commaSep1(rule) {
  return seq(rule, repeat(seq(",", rule)))
}
